feat(bugs): support priority in list, show, and a new prioritize command
